--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         depends_on: 
             - db
         environment: 
-            - MONGO_URL=mongodb://db:27017
+            - MONGO_URL=mongodb://db:27017/soccerDB
             - CLIENT=http://localhost:3000
         command: npm run dev
     
